--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2014-07-02
 Author: Andreas Kitsche
 Maintainer: Andreas Kitsche <kitsche@biostat.uni-hannover.de>
 Description: This R add-on package provides some data sets resulting from genome wide association studies.
-Depends: multcomp, coin
+Depends: multcomp, coin, nparcomp
 VignetteBuilder: knitr
 Suggests: knitr
 LazyLoad: yes
